2023-01-06  Julien Bect  <julien.bect@centralesupelec.fr>

	Simplify build process

	* Makefile: Remove the distinction between the github release and
	the Octave Forge release.  There is only one release now, the
	github one (still with two tarballs).
	* admin/build_tools/build_allpurpose.m: Update paths.
	* admin/build_tools/build_octpkg.m: Idem.
	* .github/workflows/run-tests.yml: Idem.

	Raise minimal (tested) Matlab version number to R2014a

	* README.md: Raise minimal (tested) Matlab version number to R2014a.
	* NEWS.md: Advertise the change.

2023-01-04  Julien Bect  <julien.bect@centralesupelec.fr>

	Raise required Octave version number to 4.0.1

	* README.md: Raise required Octave version number to 4.0.1.
	* admin/build_tools/build_octpkg.m: Idem.
	* admin/CODING_GUIDELINES: Update.
	* NEWS.md: Advertise the change.

	Update quilt patches

	* admin/octpkg/patches/matlab-graphics-axis-Axes.patch: Update patch.
	* admin/octpkg/patches/prevent-PKG_ADD-loop.patch: Idem.
	* admin/octpkg/patches/prevent-PKG_DEL-loop.patch: Idem.
	* admin/octpkg/patches/remove-buildmex.patch: Idem.
	* admin/octpkg/patches/remove-testprivatemex.patch: Idem.
	* admin/octpkg/patches/stk-init-mole-delete.patch: Idem.
	* admin/octpkg/patches/stk-init-rmpath-cleanup.patch: Idem.
	* admin/octpkg/patches/workaround-octave-bug-46350.patch: Idem.

2022-12-19  Julien Bect  <julien.bect@centralesupelec.fr>

	Makefile: Add quote around strings in Octave calls

	* Makefile: Add quote around strings in Octave calls

2022-12-16  Julien Bect  <julien.bect@centralesupelec.fr>

	More Hartman functions

	* examples/test_functions/stk_testfun_hartman_generic.m: Generic
	implementation of Hartman functions (Dixon-Szego diagonal form).
	* examples/test_functions/stk_testfun_hartman3.m: New function.
	* examples/test_functions/stk_testfun_hartman4.m: Rewrite using generic.
	* examples/test_functions/stk_testfun_hartman6.m: Rewrite using generic.
	* admin/octpkg/INDEX: Update Octave package index.
